cleaner version of CMakeLists
Moving resolver_config for .h to .hpp

--- a/resolver/CMakeLists.txt
+++ b/resolver/CMakeLists.txt
@@ -5,15 +5,23 @@ project (resolver)
 set (RESOLVER_VERSION_MAJOR 0)
 set (RESOLVER_VERSION_MINOR 1)
 
-set (resolver_server_dir ${PROJECT_SOURCE_DIR}/resolver_server)
+set (RESOLVER_SERVER_DIR ${PROJECT_SOURCE_DIR}/resolver_server)
+set (GENERATED_SOURCES_DIR ${PROJECT_SOURCE_DIR}/generated_sources)
 
 # cmake settings
 configure_file (
-	"${PROJECT_SOURCE_DIR}/resolver_config.h.in"
-	"${PROJECT_SOURCE_DIR}/generated_sources/resolver_config.h"
+	"${PROJECT_SOURCE_DIR}/resolver_config.hpp.in"
+	"${PROJECT_SOURCE_DIR}/generated_sources/resolver_config.hpp"
 )
 
-include_directories("${PROJECT_SOURCE_DIR}/generated_sources")
-include_directories("${resolver_server_dir}")
+include_directories("${GENERATED_SOURCES_DIR}")
+include_directories("${RESOLVER_SERVER_DIR}")
 
-add_executable(resolver_server ${resolver_server_dir}/main.cpp)
+set (GENERATED_HEADER ${GENERATED_SOURCES_DIR}/resolver_config.hpp)
+
+set (RESOLVER_SOURCES 
+	${GENERATED_HEADER}
+	${RESOLVER_SERVER_DIR}/main.cpp
+	)
+
+add_executable(resolver_server ${RESOLVER_SOURCES})
