move reference.cpp to the correct folder
Also: updating CMakeLists.txt with it

--- a/resolver/CMakeLists.txt
+++ b/resolver/CMakeLists.txt
@@ -47,6 +47,7 @@ set (RESOLVER_SOURCES
 	${RESOLVER_SERVER_DIR}/main.cpp
 	${RESOLVER_SERVER_DIR}/data.hpp
 	${RESOLVER_SERVER_DIR}/reference.hpp
+	${RESOLVER_SERVER_DIR}/reference.cpp
 	${RESOLVER_SERVER_DIR}/data_parser.hpp
 	)
 
