introducing dumper and resolver class
We now dump the output in a directory called output_dir
Implementing the skeleton for resolver class
updaing reference serialization
All the data are now properly initialized
Warning messages looks better

--- a/resolver/CMakeLists.txt
+++ b/resolver/CMakeLists.txt
@@ -51,7 +51,11 @@ set (RESOLVER_SOURCES
 	${RESOLVER_SERVER_DIR}/reference.cpp
 	${RESOLVER_SERVER_DIR}/data_parser.hpp
 	${RESOLVER_SERVER_DIR}/data_parser.cpp
-	)
+	${RESOLVER_SERVER_DIR}/data_dumper.hpp
+	${RESOLVER_SERVER_DIR}/data_dumper.cpp
+	${RESOLVER_SERVER_DIR}/game_resolver.cpp
+	${RESOLVER_SERVER_DIR}/game_resolver.hpp
+)
 
 
 add_executable(resolver_server ${RESOLVER_SOURCES} ${GENERATED_SOURCES} ${JSONCPP_SOURCES})
