Update cmakelist to handle external xtsslib

--- a/resolver/CMakeLists.txt
+++ b/resolver/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required (VERSION 3.7)
 
+if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
+  message(FATAL_ERROR "Prevented in-tree built. Please create a build directory outside of the root and call cmake from there")
+endif()
+
 project (resolver)
 
 #compiler requirement
 set (CMAKE_CXX_STANDARD 14)
 
-include (xtsslib/utility.cmake)
+set (XTSSLIB_SOURCES_DIR "${PROJECT_SOURCE_DIR}/xtsslib" CACHE PATH "source path to xtsslib dependancy, default to the case that submodule is initialized")
+
+include ("${XTSSLIB_SOURCES_DIR}/utility.cmake")
 
 # the version number
 set (RESOLVER_VERSION_MAJOR 0)
@@ -14,10 +20,9 @@ set (RESOLVER_VERSION_MINOR 1)
 find_boost_lib("program_options")
 
 # shortcut for directories used for the compilation
-set (RESOLVER_SERVER_DIR ${PROJECT_SOURCE_DIR}/resolver_server)
-set (GENERATED_SOURCES_DIR ${PROJECT_SOURCE_DIR}/generated_sources)
-set (JSONCPP_SOURCES_DIR ${PROJECT_SOURCE_DIR}/jsoncpp_amalgamated)
-set (XTSSLIB_SOURCES_DIR ${PROJECT_SOURCE_DIR}/xtsslib)
+set (RESOLVER_SERVER_DIR PATH ${PROJECT_SOURCE_DIR}/resolver_server)
+set (GENERATED_SOURCES_DIR PATH ${PROJECT_SOURCE_DIR}/generated_sources)
+set (JSONCPP_SOURCES_DIR PATH ${PROJECT_SOURCE_DIR}/jsoncpp_amalgamated)
 
 # cmake settings
 configure_file (
@@ -32,7 +37,6 @@ include_directories("${JSONCPP_SOURCES_DIR}")
 include_directories("${XTSSLIB_SOURCES_DIR}")
 include_directories("${Boost_INCLUDE_DIRS}")
 link_directories("${Boost_LIBRARY_DIRS}")
-
 # sources in the generated_sources directory
 set (GENERATED_SOURCES ${GENERATED_SOURCES_DIR}/resolver_config.hpp)
 
@@ -60,4 +64,3 @@ set (RESOLVER_SOURCES
 
 add_executable(resolver_server ${RESOLVER_SOURCES} ${GENERATED_SOURCES} ${JSONCPP_SOURCES})
 target_link_libraries(resolver_server ${Boost_LIBRARIES})
-
